--- a/css/horizontalBarChart.css
+++ b/css/horizontalBarChart.css
@@ -1,7 +1,7 @@
 
 .horizontalBarChart {
     display:table;
-    width:100%;
+    font-family: RobotoLight;
 }
 
 .lineHolder{
@@ -12,7 +12,7 @@
 
 .barContainer {
 	display:inline-block;
-    width:calc(100% - 100px);
+    width:calc(100% - 140px);
 }
 
 .barLabel{
